--- a/estilos.html
+++ b/estilos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./estilos.css">
-    <title>Mi Proyecto</title>
+    <title>Mi Proyecto es este</title>
 </head>
 <body>
     <h1>Tablas</h1>
